--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3  # Usando a versão mais recente do checkout
 
+    - name: Fetch all commits to unshallow the repository
+      run: git fetch --all --unshallow  # Garante que o repositório não seja um shallow clone
+
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
