--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      
+    - name: Install dompurify
+      run: npm install dompurify
 
     - name: Build the project
       run: npm run build
