--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@fluentui/react": "^8.122.14",
     "next": "^15.1.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "dompurify": "^3.0.0"
+}
   },
   "scripts": {
     "dev": "next dev",
