--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "dependencies": {
-    "@fluentui/react": "^8.122.14",
-    "next": "^15.1.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "dompurify": "^3.0.0"
+      "dependencies": {
+        "@fluentui/react": "^8.122.14",
+        "next": "^15.1.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "dompurify": "^3.0.0"
   },
+      "devDependencies": {
+        "@types/node": "22.13.5",
+        "@types/office-js": "^1.0.486",
+        "@types/react": "^18.3.20",
+        "typescript": "5.7.3",
+        "@types/trusted-types": "^2.0.7"
+      },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "devDependencies": {
-    "@types/node": "22.13.5",
-    "@types/office-js": "^1.0.486",
-    "@types/react": "^18.3.20",
-    "typescript": "5.7.3"
   }
 }
