--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
     "target": "ES2017",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "jsx": "react-jsx",  // Adicione isso para Next.js/React 17+
+    "jsx": "react-jsx",  // Certifique-se de que essa linha está correta
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  },
+  }
+},
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
